--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,10 +11,23 @@
  *= require_self
  *= require_tree .
 */
-
 .hidden {display: none; }
-div#jbhnm-signing-identity label, input { display:block; }
-div#jbhnm-signing-identity fieldset { padding:0; border:0; margin-top:25px; }
 
-.errorMsg { border: 1px solid red; background-color: darksalmon; }
-.infoMsg  { border: 1px solid gray; background-color: wheat; }
+
+.row, .col { overflow: hidden; position: absolute; }
+.row { left: 0; right: 0; }
+.col { top: 0; bottom: 0; }
+.scroll-x { overflow-x: auto; }
+.scroll-y { overflow-y: auto; }
+
+.header.row {
+    height: 20px;
+    top: 0;
+    font-size: 10pt;
+    color: #000000;
+    background-color: cadetblue;
+    border: 0px;
+    font-weight:bold;
+    text-align: center;
+}
+.body.row { top: 20px; bottom: 0px; padding: 10px 10px 0px 10px; }
