--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -98,6 +98,7 @@
         <%= text_field_tag(:name) %>
         <%= label_tag(:description, 'Description:') %>
         <%= text_area_tag(:description, "", size: "40x10") %>
+        <input name="user_id" type="hidden" value="<%= current_user().id %>" />
     <% end %>
   </div>
 </div>
