--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,8 @@
-<%= csrf_meta_tag %>
-<div style="float:left; height: 100%; width: 49%; margin-right: 10px; padding: 10px; border: 1px solid red;">
+<script language="JavaScript">
+    var _myUserId = <%= current_user().id %>;
+</script>
+
+<div style="float:left; height: 99%; width: 400px; margin-right: 10px; padding: 10px; border: 1px solid red;">
     <h1>Hi <%= current_user().name %></h1>
     <div id="tabs">
       <ul>
@@ -12,12 +15,20 @@
             You don't have any trips yet... better get planning!
         <% else %>
             <p> These are your trips: </p>
-            <ul>
-            <% @trips.each do |thisTrip|  %>
-                <li><%= thisTrip.name %></li>
-            <% end %>
-            </ul>
-      <% end %>
+            <table id="TripsTable">
+              <thead>
+                <tr>
+                  <th>Trip</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td colspan="2"> <%= image_tag("ajax-loader1.gif") %>Loading your trips...</td>
+                </tr>
+              </tbody>
+            </table>
+        <% end %>
             <div>
                 <a href="#" id="NewTripLink">New</a>
             </div>
