--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,64 +1,117 @@
-<h1>Landing#index</h1>
-<p>Find me in app/views/landing/index.html.erb</p>
+<script language="JavaScript">
+    var _myUserId = <%= current_user().id %>;
+</script>
 
-<%= form_tag({:controller => 'landing', :action => 'index'}, :method => 'get') do %>
-    <%= label_tag(:location, 'Enter a Location:') %>
-    <%= text_field_tag(:location) %>
-    <%= submit_tag('Search')   %>
-<% end %>
+<div style="float:left; height: 99%; width: 400px; margin-right: 10px; padding: 10px; border: 1px solid red;">
+    <h1>Hi <%= current_user().name %></h1>
+    <div id="tabs">
+      <ul>
+        <li><a href="#YourTrips">Your trips</a></li>
+        <li><a href="#YourBookmarks">Bookmarks</a></li>
+      </ul>
 
-<% if @search_location.nil? %>
-    <%# TODO need to handle empty string search  %>
-<% else %>
-    <%= form_tag({:controller => 'locations', :action => 'create'}, :method => 'post') do %>
-        <%= hidden_field_tag :address, @search_location.first.data['address_components'][0]['long_name'] %>
-        <%= submit_tag('Add Location')   %>
+      <div id="YourTrips">
+        <% if @trips.nil? || @trips.length < 1 %>
+            You don't have any trips yet... better get planning!
+        <% else %>
+            <p> These are your trips: </p>
+            <table id="TripsTable">
+              <thead>
+                <tr>
+                  <th>Trip</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td colspan="2"> <%= image_tag("ajax-loader1.gif") %>Loading your trips...</td>
+                </tr>
+              </tbody>
+            </table>
+        <% end %>
+            <div>
+                <a href="#" id="NewTripLink">New</a>
+            </div>
+      </div>
+      <div id="YourBookmarks">
+        Todo
+      </div>
+    </div>
+</div>
+
+<div style="float:left; width: auto; padding: 10px; border: 1px solid blue;">
+    <h1> Search for something...</h1>
+    <%= form_tag({:controller => 'landing', :action => 'index'}, :method => 'get') do %>
+        <%= label_tag(:location, 'Enter a Location:') %>
+        <%= text_field_tag(:location) %>
+        <%= submit_tag('Search')   %>
     <% end %>
 
-    <% @search_location.first.data['address_components'].each do |object1| %>
-        <table>
-          <tr><%= object1 %></tr>
+    <% if @search_location.nil? %>
+        <%# TODO need to handle empty string search  %>
+    <% else %>
+        <%= form_tag({:controller => 'locations', :action => 'create'}, :method => 'post') do %>
+            <%= hidden_field_tag :address, @search_location.first.data['address_components'][0]['long_name'] %>
+            <%= submit_tag('Add Location')   %>
+        <% end %>
+
+        <% @search_location.first.data['address_components'].each do |object1| %>
+            <table>
+              <tr><%= object1 %></tr>
+            </table>
+        <% end %>
+        <br>
+
+        <% @search_location.first.data['geometry'].each do |object2| %>
+            <table>
+              <tr><%= object2 %></tr>
+            </table>
+        <% end %>
+        <br>
+
+        <table border="1">
+          <tr>
+            <th>Long Name</th>
+            <th>City</th>
+            <th>Country Code</th>
+            <th>Country</th>
+            <th>Latitude</th>
+            <th>Longitude</th>
+            <th>Type</th>
+          </tr>
+          <tr>
+            <td><%= @search_location.first.data['address_components'][0]['long_name'] %></td>
+            <td><%= @search_location.first.city %></td>
+            <td><%= @search_location.first.country_code %></td>
+            <td><%= @search_location.first.country %></td>
+            <td><%= @search_location.first.coordinates[0] %></td>
+            <td><%= @search_location.first.coordinates[1] %></td>
+            <td><%= @search_location.first.types %></td>
+          </tr>
         </table>
+
+        <br>
+        <%#= @search_location %>
     <% end %>
-    <br>
 
-    <% @search_location.first.data['geometry'].each do |object2| %>
-        <table>
-          <tr><%= object2 %></tr>
-        </table>
+    <div style='width: 800px;'>
+      <div id="map" style='width: 800px; height: 400px;'></div>
+    </div>
+</div>
+
+<div id="TripDialog" title="Create a new trip..." class="hidden">
+  <div id="TripDialogMessage" class="hidden">
+  </div>
+
+  <div id="TripDialogForm">
+    <%= form_tag("#") do %>
+        <%= label_tag(:name, 'Name:') %>
+        <%= text_field_tag(:name) %>
+        <%= label_tag(:description, 'Description:') %>
+        <%= text_area_tag(:description, "", size: "40x10") %>
+        <input name="user_id" type="hidden" value="<%= current_user().id %>" />
     <% end %>
-    <br>
-
-    <table border="1">
-      <tr>
-        <th>Long Name</th>
-        <th>City</th>
-        <th>Country Code</th>
-        <th>Country</th>
-        <th>Latitude</th>
-        <th>Longitude</th>
-        <th>Type</th>
-      </tr>
-      <tr>
-        <td><%= @search_location.first.data['address_components'][0]['long_name'] %></td>
-        <td><%= @search_location.first.city %></td>
-        <td><%= @search_location.first.country_code %></td>
-        <td><%= @search_location.first.country %></td>
-        <td><%= @search_location.first.coordinates[0] %></td>
-        <td><%= @search_location.first.coordinates[1] %></td>
-        <td><%= @search_location.first.types %></td>
-      </tr>
-    </table>
-
-    <br>
-    <%#= @search_location %>
-<% end %>
-
-
-
-
-<div style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
+  </div>
 </div>
 
 <script type="text/javascript">
