Delete works in that it sends it server side... but just need to add the javascript that will remove the entyr from the table browser side now...

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -99,6 +99,10 @@
     </div>
 </div>
 
+<div id="DeleteTripDialog" title="Delete this trip?!" class="hidden">
+  <p>This trip will be permanently deleted and cannot be recovered. Are you sure?</p>
+</div>
+
 <div id="TripDialog" title="Create a new trip..." class="hidden">
   <div id="TripDialogMessage" class="hidden">
   </div>
@@ -122,6 +126,5 @@
         handler.fitMapToBounds();
 
     });
-
 </script>
 
