--- a/app/views/application/_authentication.erb
+++ b/app/views/application/_authentication.erb
@@ -6,7 +6,7 @@
     <a id="LoginLinkTW"><%= image_tag('twitter_32x32.png') %></a>
   </div>
 
-
+  <%# TODO username doesn't show up once logged in unless refresh again %>
   <div id="AuthBar_Out" class="<%= current_user() ? "visible" : "hidden" %>">
     <a id="LogoutLink" href="/auth/logout">Logout</a>
 
