--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,26 +8,33 @@
   <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
-  <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+  <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false" type="text/javascript"></script>
   <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "specific/#{params[:controller]}" %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 
-<% if params[:controller] != "sessions" %>
+<% if params[:controller] != "sessions" && params[:controller] != "trips" %>
 <!-- START: Header  --------------------------------------------------------------------------------------------------->
 <div class="header row">You are logged in as <%= current_user().name %>. Not you? <%= link_to "Logout...", :controller => :sessions, :action => :destroy %> </div>
+<!-- END: Header------------------------------------------------------------------------------------------------------->
+
+<!-- START: Scollable body div ---------------------------------------------------------------------------------------->
 <div class="body row scroll-y">
 <% end %>
 
+<!-- START: Content --------------------------------------------------------------------------------------------------->
 <%= yield %>
+<!-- END: Content ----------------------------------------------------------------------------------------------------->
 
 <% if params[:controller] != "sessions" %>
-<!-- START: Footer  --------------------------------------------------------------------------------------------------->
 </div>
+<!-- END: Scollable body div ------------------------------------------------------------------------------------------>
 <% end %>
 </body>
 </html>
