First step in being able to delete items... still buggy and only client side with test data. Does not do the server side stuff yet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<% if params[:controller] != "sessions" && params[:controller] != "trips" %>
+<% if params[:controller] != "sessions" %>
 <!-- START: Header  --------------------------------------------------------------------------------------------------->
 <div class="header row">You are logged in as <%= current_user().name %>. Not you? <%= link_to "Logout...", :controller => :sessions, :action => :destroy %> </div>
 <!-- END: Header------------------------------------------------------------------------------------------------------->
