--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -47,10 +47,8 @@
 
 <div style="border: 1x solid magenta;">
   <div id="map-canvas" style="width: 500px; float: left;"></div>
-  <div style="width: 700px; float: left;">
-
+  <div style="padding-left: 510px;">
     <ul id="sortable">
     </ul>
-
   </div>
 </div>
