--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Trips controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#sortable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
+#sortable { list-style-type: none; margin: 0; padding: 0; }
 #sortable li { position: relative;  margin: 0 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; overflow: auto}
 #sortable li:hover { background: yellow; }
 
