Oh yeah! Routes now have distances and times for each leg and there is a loading image that displays whilst everything is being processed... woot woot

--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -1,6 +1,9 @@
 // Place all the styles related to the Trips controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "common";
+
+
 #sortable { list-style-type: none; margin: 0; padding: 0; }
 #sortable li { position: relative;  margin: 0 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; overflow: auto}
 #sortable li:hover { background: yellow; }
@@ -21,4 +24,13 @@ html, body, #map-canvas {
   background-color: #fff;
   padding: 5px;
   border: 1px solid #999;
+}
+
+.TripLegInfo {
+   border: 1px solid #696969;
+  background-color: #d3d3d3;
+  font-size: 8pt;
+  padding: 5px;
+  margin-left: 10px;
+  @include borderRadius(5px);
 }
