--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -30,7 +30,12 @@ html, body, #map-canvas {
    border: 1px solid #696969;
   background-color: #d3d3d3;
   font-size: 8pt;
-  padding: 5px;
+  padding: 0 5px 0 5px;
   margin-left: 10px;
   @include borderRadius(5px);
+}
+
+ul#sortable li {
+  @include borderRadius(5px);
+  border: 1px solid darkgray;
 }
