More updates to the javascript side of things. Just general fixes

--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -37,7 +37,7 @@ html, body, #map-canvas {
   border: 1px solid #999;
 }
 
-.ItineryLegInfo {
+.ItineryLegInfo, .ItineryLegDuration {
   border: 1px solid #696969;
   background-color: #d3d3d3;
   font-size: 8pt;
