--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -51,7 +51,7 @@
   <span id="SearchingMessage" class="hidden"> <%= image_tag("ajax-loader1.gif") %> Searching... </span>
 </div>
 
-<div style="border: 1px solid magenta;">
+<div>
   <div id="map-canvas" style="width: 500px; float: left;"></div>
   <div style="padding-left: 510px;">
     <ul id="sortable">
@@ -65,26 +65,3 @@
   <form id="GeocodeResultsChoices"></div>
 
 </div>
-
-<!--
-TODO PERHAPS! Would like to use this as a template and then clone it each time I'm creating a list item
-<div class="hidden">
-  <ul>
-    <li id="ItineryItemTemplate">
-      <span class="ItineryTitleText"></span>
-      <span class="ItineryLegInfo"></span>
-      <span class="ItineryLegTiming"></span>
-      <span class="ItineryLinks" style="position: absolute; right:0; margin-right: 10px;">
-        <a name="DeleteLink" href="#">Delete</a> |
-        <a name="ExpandLink" href="#">Expand</a>
-      </span>
-      <div class="ItineryExpandable" style="display:none; border: 1px solid red; top: 0; left: 0;">
-        <p>Start: <input type="text" class="DatePicker" size="30"></p>
-        <p>End:   <input type="text" class="DatePicker" size="30"></p>
-        <textarea>
-        </textarea>
-      </div>
-    </li>
-  </ul>
-</div>
--->
