date duration displays when oxes are valid. hides when either is emptyied. json for trip save is now generated. ajax sent but server side needs to be completed added current user and trip id to javascript in erb file

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,3 +1,8 @@
+<script language="JavaScript">
+    var _myUserId = <%= current_user().id %>;
+    var _myTripId = <%= @trip.id %>
+</script>
+
 <h1> Trip: </h1>
 <div style="width: 200px;">
     <p>
