--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,13 +21,15 @@
 .scroll-y { overflow-y: auto; }
 
 .header.row {
-    height: 20px;
+    min-height: 70px;
     top: 0;
-    font-size: 10pt;
+    font-size: 7pt;
     color: #000000;
     background-color: cadetblue;
     border: 0px;
     font-weight:bold;
-    text-align: center;
+    text-align: left;
 }
-.body.row { top: 20px; bottom: 0px; padding: 10px 10px 0px 10px; }
+
+
+.body.row { top: 60px; bottom: 0px; padding: 10px 10px 0px 10px; }
