--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :latitude %><br />
     <%= f.text_field :latitude %>
   </div>
+    <div class="field">
+      <%= f.label :country_name %><br />
+      <%= f.text_field :country_name %>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
