--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -24,12 +24,11 @@
     <td><%= trip.my_trip %></td>
     <td><%= trip.user_id %></td>
     <td><%= link_to 'Show', trip %></td>
-    <td><%= link_to 'Edit', edit_trip_path(trip) %></td>
-    <td><%= link_to 'Destroy', trip, confirm: 'Are you sure?', method: :delete %></td>
+    <% if  @currentUser.id == trip.user_id %>
+        <td><%= link_to 'Edit', edit_trip_path(trip) %></td>
+        <td><%= link_to 'Destroy', trip, confirm: 'Are you sure?', method: :delete %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
 
-<br />
-
-<%= link_to 'New Trip', new_trip_path %>
