--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -67,6 +67,7 @@
 
 <div id="GeocodeResultsDialog" class="hidden">
   <div id="GeocodeResultsMap"></div>
-  <form id="GeocodeResultsChoices"></div>
+  <form id="GeocodeResultsChoices"></form>
 
 </div>
+
